# metasploit-payloads

c/meterpreter/: PACKET.md
c/meterpreter/source/common/: common.h  common_core.h  common_metapi.h  common_remote.h
c/meterpreter/source/dll/: metsrv.c
c/meterpreter/source/exe/: main.c
c/meterpreter/source/extensions/lanattacks/: lanattacks.c
c/meterpreter/source/extensions/stdapi/: CMakeLists.txt
c/meterpreter/source/extensions/stdapi/server/: stdapi.c
c/meterpreter/source/extensions/stdapi/server/resource/: hook.c
c/meterpreter/source/extensions/stdapi/server/sys/config/: config.c
c/meterpreter/source/extensions/stdapi/server/sys/process/: image.c  memory.c  process.c  ps.c  thread.c
c/meterpreter/source/extensions/stdapi/server/sys/registry/: registry.c
c/meterpreter/source/extensions/stdapi/server/ui/: keyboard.c
c/meterpreter/source/extensions/stdapi/server/webcam/: bmp2jpeg.c
c/meterpreter/source/injector/: CMakeLists.txt  dll.c  main.c
c/meterpreter/source/jpeg-8/: CMakeLists.txt
c/meterpreter/source/json-c/: CMakeLists.txt  config.h  config.h.win32  json_object.c  json_object.h  json_object_private.h  json_pointer.c  json_tokener.c
c/meterpreter/source/metsrv/: CMakeLists.txt  base.c  base_dispatch.c  base_inject.c.1  base_inject_nop.c  channel.c  core.c  core.h  data_json.c  dllmain.c  json.c  json.c.1  json.h  main.c  metapi.c  metsrv.c  metsrv.h  packet.c  packet.h  remote_dispatch.c  server_setup.c  server_transport_tcp.c
c/meterpreter/source/metsrv_test/: CMakeLists.txt  main.c  mock.c
c/meterpreter/source/shell/: CMakeLists.txt  CMakeLists.txt.1  README.md  dllmain.c  dllmain2.cpp  main.c  reverse.c  shell.c  shell2.cpp
c/meterpreter/source/stager/: CMakeLists.txt  main.c
c/meterpreter/workspace/ext_server_stdapi/: CMakeLists.txt
c/meterpreter/workspace/metsrv/: CMakeLists.txt  metsrv.vcxproj
